[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/player/hitbox_circle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/BulletGenerator.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/bullets/PlayerBasic.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/PlayerBulletGenerator.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/shooting/player_shooting.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/bullets/PlayerBullet2.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sprites/player/eff_hitbox.png" type="Texture" id=8]
[ext_resource path="res://scripts/PlayerHitboxSprite.gd" type="Script" id=9]
[ext_resource path="res://scripts/SpriteHitboxCircle.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 28.6478

[node name="Player" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )
shooter_timer_wait_time = 0.1

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Collision"]
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 26.1594, 26.2368, 11.5661, 11.6946 )
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Collision/Sprite"]
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( -0.587154, -0.985126, 65.136, 65.7493 )
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="Collision/Sprite"]

[node name="ShootingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -28.038
pitch_scale = 0.76

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="ShootingTimer2" type="Timer" parent="."]
wait_time = 0.456

[node name="ShootingLevel2" parent="." instance=ExtResource( 3 )]
visible = false
script = ExtResource( 5 )
bullet_scene = ExtResource( 7 )
rotate_speed = 30
radius = 80
radius_gap = 0.7

[node name="ShootingLevel1" parent="." instance=ExtResource( 3 )]
visible = false
script = ExtResource( 5 )
bullet_scene = ExtResource( 4 )
spawn_point_count = 2
radius = 100
radius_gap = 0.0
[connection signal="player_shooting" from="." to="ShootingLevel1" method="_on_Player_player_shooting"]
[connection signal="player_shooting_2" from="." to="ShootingLevel2" method="_on_Player_player_shooting_2"]
[connection signal="start_focusing" from="." to="ShootingLevel1" method="_on_Player_start_focusing"]
[connection signal="stop_focusing" from="." to="ShootingLevel1" method="_on_Player_stop_focusing"]
[connection signal="area_entered" from="Collision" to="." method="_on_Collision_area_entered"]
[connection signal="tween_all_completed" from="Collision/Sprite/Tween" to="Collision/Sprite" method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
[connection signal="timeout" from="ShootingTimer2" to="." method="_on_ShootingTimer2_timeout"]
